# jumplist_parser

./: Cargo.toml  README.md
.github/workflows/: release.yml
samples/other/: 5f7b5f1e01b83767.automaticDestinations-ms  DestList
samples/win10/AutomaticDestinations/: 4cb9c5750d51c07f.automaticDestinations-ms  5d696d521de238c3.automaticDestinations-ms  5f7b5f1e01b83767.automaticDestinations-ms  7e4dca80246863e3.automaticDestinations-ms  83dd64e7fa560bd5.automaticDestinations-ms  9b9cdc69c1c24e2b.automaticDestinations-ms  a0c14af241d40144.automaticDestinations-ms  a52b0784bd667468.automaticDestinations-ms  d06c94537ecaee12.automaticDestinations-ms  d38a3ea7ec79fbed.automaticDestinations-ms  ecd1a5e2c3af9c46.automaticDestinations-ms  f01b4d95cf55d32a.automaticDestinations-ms  faef7def55a1d4b.automaticDestinations-ms
samples/win10/CustomDestinations/: 1ced32d74a95c7bc.customDestinations-ms
samples/win11/AutomaticDestinations/: 4cb9c5750d51c07f.automaticDestinations-ms  5d696d521de238c3.automaticDestinations-ms  5f7b5f1e01b83767.automaticDestinations-ms  6dc04f5ccc522861.automaticDestinations-ms  83dd64e7fa560bd5.automaticDestinations-ms  a0c14af241d40144.automaticDestinations-ms  a52b0784bd667468.automaticDestinations-ms  ae6df75df512bd06.automaticDestinations-ms  d38a3ea7ec79fbed.automaticDestinations-ms  ecd1a5e2c3af9c46.automaticDestinations-ms  f01b4d95cf55d32a.automaticDestinations-ms  faef7def55a1d4b.automaticDestinations-ms
src/: appids.rs  custom_destinations.rs  destlist.rs  errors.rs  lib.rs  main.rs
tests/: jump_list_tests.rs
(+5 files in other folders)
